--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,14 @@ p {
   color: white;
 }
 
+.header-wrapper {
+  position: fixed;
+  top: 0;
+  height: 70px;
+  color: white;
+}
+
 .previous, .next {
-  height: 500px;
   width: 8%;
   background: none;
   position: fixed;
@@ -28,7 +34,7 @@ p {
 }
 
 .previous {
-  top: 0;
+  top: 70px;
   left: 0;
 }
 
@@ -37,21 +43,21 @@ p {
 }
 
 .next {
-  top: 0;
+  top: 70px;
   right: 0;
 }
 
 .timeline-outer {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%; 
 }
 
 .timeline-inner {
+  position: absolute;
   width: 100%;
-  height: 500px;
+  height: 800px;
   background-position: center center;
+  background-repeat: no-repeat;
 }
 
 .text-container {
