--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,14 @@ p {
   padding: 0 30px;
 }
 
+.header-wrapper p {
+  margin: 0 0 0 16px;
+}
+
+.header-wrapper h2 {
+  margin: 10px 0 0 0;
+}
+
 h2.timeline-nav {
   margin: 0;
   height: 60px;
@@ -48,7 +56,7 @@ h2.timeline-nav {
   padding: 0 15px;
   margin: 0 30px;
   border-radius: 5px;
-  background: rgba(0,0,0,0.4);
+  background: rgba(0,0,0,0.5);
   cursor: pointer;
 }
 
@@ -112,7 +120,7 @@ h2.timeline-nav {
 }
 
 .date-box:hover {
-  box-shadow: inset 0 0 6px rgba(0,0,0,0.4);
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.8);
 }
 
 .date-box.selected:hover {
